changed the properties file.

--- a/twitter4j.properties
+++ b/twitter4j.properties
@@ -1,5 +1,5 @@
 debug=true
-oauth.consumerKey=92xxtLmhBJnxpPYvVK3RuA5dh
-oauth.consumerSecret=gLM6c5ZoXyhIw4Z7KwMGjLhbpxNhyIROwlDP5QzPQTJIT63c37
-oauth.accessToken=2787239833-AqSFxS32bhMHHDVJkY2Rr7SmDZ5QVrzSQVLxuZj
-oauth.accessTokenSecret=Y3UvBt1v482ipr2Fq8i0RDDquyYxIfljwiXDtvocZNsfh
+oauth.consumerKey=
+oauth.consumerSecret=
+oauth.accessToken=
+oauth.accessTokenSecret=
